--- a/app/src/main/res/layout/gridview_item.xml
+++ b/app/src/main/res/layout/gridview_item.xml
@@ -9,6 +9,7 @@
     <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:foreground="@drawable/border"
             android:id="@+id/gridview_img"
     />
 
