--- a/app/src/main/res/menu/menu_pokedex.xml
+++ b/app/src/main/res/menu/menu_pokedex.xml
@@ -2,8 +2,16 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.aarstrand.zindre.pokechecklist.PokedexActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
+    <item android:id="@+id/action_filter"
+          android:title="@string/action_filter"
           android:orderInCategory="100"
-          app:showAsAction="never"/>
+          android:icon="@drawable/ic_action_filter"
+          android:checkable="true"
+          app:showAsAction="ifRoom"/>
+    <item android:id="@+id/action_search"
+          android:title="@string/action_search"
+          android:orderInCategory="90"
+          app:showAsAction="collapseActionView|ifRoom"
+          app:actionViewClass="android.widget.SearchView"
+          android:icon="@drawable/ic_action_search"/>
 </menu>
