--- a/app/src/main/res/layout/content_my_shinies.xml
+++ b/app/src/main/res/layout/content_my_shinies.xml
@@ -28,7 +28,7 @@
             android:horizontalSpacing="@dimen/gridview_spacing"
             android:stretchMode="columnWidth"
             android:gravity="center"
-            android:layout_marginTop="10dp"
+            android:paddingTop="10dp"
     />
 
 </RelativeLayout>
