--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,10 @@
     <dimen name="menu_top_margin">30dp</dimen>
     <dimen name="gridview_width">100dp</dimen>
     <dimen name="gridview_spacing">10dp</dimen>
+    <dimen name="name_height">40dp</dimen>
+    <dimen name="evolve_button_width">200dp</dimen>
+    <dimen name="evolve_button_height">80dp</dimen>
+    <dimen name="catch_edit_button_width">40dp</dimen>
     <item name="pokemon_image_y_scale" type="dimen" format="float">0.8</item>
     <item name="pokemon_image_x_scale" type="dimen" format="float">0.8</item>
 </resources>
