--- a/app/src/main/res/layout/gridview_item.xml
+++ b/app/src/main/res/layout/gridview_item.xml
@@ -3,7 +3,6 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/pokemonBackground"
 >
 
     <ImageView
@@ -11,6 +10,8 @@
             android:layout_height="match_parent"
             android:foreground="@drawable/border"
             android:id="@+id/gridview_img"
+            android:background="@color/pokemonBackground"
+            android:layout_marginTop="@dimen/gridview_spacing"
     />
 
     <TextView
@@ -41,7 +42,6 @@
             android:layout_alignEnd="@id/gridview_img"
             android:paddingTop="5dp"
             android:textAlignment="center"
-
     />
 
 </RelativeLayout>
