--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
     <dimen name="evolve_button_width">200dp</dimen>
     <dimen name="evolve_button_height">80dp</dimen>
     <dimen name="catch_edit_button_width">40dp</dimen>
+    <dimen name="edit_text_to_edit_text_button">10dp</dimen>
     <item name="pokemon_image_y_scale" type="dimen" format="float">0.8</item>
     <item name="pokemon_image_x_scale" type="dimen" format="float">0.8</item>
 </resources>
