--- a/app/src/main/res/layout/content_hunt.xml
+++ b/app/src/main/res/layout/content_hunt.xml
@@ -7,7 +7,7 @@
         android:gravity="center_horizontal"
         android:background="@color/shinydexBackground"
 >
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/hunt_toolbar"
