--- a/app/src/main/res/layout/content_my_shinies.xml
+++ b/app/src/main/res/layout/content_my_shinies.xml
@@ -10,7 +10,7 @@
         android:background="@color/shinydexBackground"
         tools:context="com.aarstrand.zindre.pokechecklist.MyShiniesActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/my_shinies_toolbar"
