--- a/app/src/main/res/layout/content_pokedex.xml
+++ b/app/src/main/res/layout/content_pokedex.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         tools:context="com.aarstrand.zindre.pokechecklist.PokedexActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/toolbarBackground"
@@ -28,13 +28,13 @@
             layout="@layout/filter_layout"
     />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/pokedex_filter"
             android:scrollbars="vertical"
             android:id="@+id/pokemon_list">
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 </RelativeLayout>
