--- a/app/src/main/res/layout/content_pokemon.xml
+++ b/app/src/main/res/layout/content_pokemon.xml
@@ -12,7 +12,7 @@
 
 
 >
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:background="@color/colorPrimary"
