--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -25,7 +25,7 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/menu_top_margin"
             android:paddingBottom="@dimen/activity_vertical_margin"
-            android:background="@color/backgroundGrey"
+            android:background="#ffff"
             tools:showIn="@layout/activity_main"
             tools:context="com.aarstrand.zindre.pokechecklist.MainActivity"
             android:orientation="vertical"
@@ -73,6 +73,15 @@
                 android:id="@+id/button3"
         />
 
+        <com.aarstrand.zindre.pokechecklist.custom.MainTextView
+            android:id="@+id/custom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/menu_button_top_padding"
+            android:layout_marginBottom="@dimen/menu_button_bottom_padding"
+            android:elevation="4dp"
+            app:imageSrc="@drawable/pokedex"
+            app:text="heihåhaho" />
         <!--
         <Button
                 android:text="@string/button4"
