--- a/app/src/main/res/layout/content_hunt.xml
+++ b/app/src/main/res/layout/content_hunt.xml
@@ -19,14 +19,16 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             app:text="Hello"
+            app:image="@drawable/hunt"
             />
         <com.aarstrand.zindre.pokechecklist.custom.MainButton
             android:id="@+id/bot"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             app:layout_constraintTop_toBottomOf="@id/top"
             app:text="hello"
             app:flipped="true"
+            app:image="@drawable/pokedex"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
