--- a/app/src/main/res/layout/new_main.xml
+++ b/app/src/main/res/layout/new_main.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/dexBut"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:text="@{main.button1}"
+                android:text="@{main.b1Text}"
                 android:textAlignment="center"
                 android:background="@drawable/button_right"
                 android:layout_margin="40dp"
@@ -90,7 +90,7 @@
                 android:stateListAnimator="@null"
                 android:minHeight="50dp"
                 android:maxHeight="100dp"
-                android:text="@{main.button2}"
+                android:text="@{main.b2Text}"
                 android:background="@drawable/button_left"
                 android:layout_margin="40dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -134,7 +134,7 @@
                 android:stateListAnimator="@null"
                 android:minHeight="50dp"
                 android:maxHeight="100dp"
-                android:text="@{main.button3}"
+                android:text="@{main.b3Text}"
                 android:background="@drawable/button_right"
                 android:layout_margin="40dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -177,7 +177,7 @@
                 android:layout_height="0dp"
                 android:minHeight="100dp"
                 android:maxHeight="200dp"
-                android:text="@{main.button4}"
+                android:text="@{main.b4Text}"
                 android:background="@drawable/button_left"
                 android:layout_margin="40dp"
                 app:layout_constraintTop_toTopOf="parent"
