--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <attr name="image" format="reference"/>
     <declare-styleable name="MainTextView">
         <attr name="textColor" format="color"/>
         <attr name="textAlign" format="enum">
@@ -20,8 +21,8 @@
         <attr name="flippedd" format="boolean"/>
     </declare-styleable>
     <declare-styleable name="MainButton">
+        <attr name="image"/>
         <attr name="text" format="string"/>
-        <attr name="image" format="reference"/>
         <attr name="flipped" format="boolean"/>
         <attr name="align" format="flags">
             <flag name="horizontalCenter" value="1"/>
@@ -32,5 +33,11 @@
             <flag name="bottom" value="32"/>
         </attr>
         <attr name="paddingOnLimitation" format="dimension"/>
+    </declare-styleable>
+    <declare-styleable name="CatchItem">
+        <attr name="image"/>
+        <attr name="ball" format="integer"/>
+        <attr name="nickname" format="string"/>
+        <attr name="game" format="integer"/>
     </declare-styleable>
 </resources>
