bugfixes and improvements to dexitem

--- a/app/src/main/res/layout/content_my_shinies.xml
+++ b/app/src/main/res/layout/content_my_shinies.xml
@@ -21,8 +21,11 @@
     <com.aarstrand.zindre.pokechecklist.custom.DexItem
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-        />
+        android:padding="20dp"
+        app:count="1"
+        app:image="@drawable/pokedex"
+        app:name="Feraligatr"
+        app:number="30" />
 
 
 
