click events on main page

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -31,7 +31,7 @@
             android:id="@+id/dex"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{() -> main.onClick(Launch.DEX)}"
+            android:onClick="@{() -> main.onClick(main.b1Launch)}"
             app:flipped="false"
             app:image="@{main.b1Image}"
             app:text="@{main.b1Text}"
@@ -49,6 +49,7 @@
             app:flipped="true"
             app:image="@{main.b2Image}"
             app:text="@{main.b2Text}"
+            android:onClick="@{() -> main.onClick(main.b2Launch)}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dex"
@@ -64,6 +65,7 @@
             app:flipped="false"
             app:image="@{main.b3Image}"
             app:text="@{main.b3Text}"
+            android:onClick="@{() -> main.onClick(main.b3Launch)}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/hunt"
@@ -79,6 +81,7 @@
             app:flipped="true"
             app:image="@{main.b4Image}"
             app:text="@{main.b4Text}"
+            android:onClick="@{() -> main.onClick(main.b4Launch)}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/collection"
