--- a/app/src/main/res/layout/new_main.xml
+++ b/app/src/main/res/layout/new_main.xml
@@ -5,10 +5,10 @@
     android:id="@+id/layout">
 
     <data>
-        <import type="com.aarstrand.zindre.pokechecklist.data.Launch"/>
+        <import type="com.aarstrand.zindre.pokechecklist.viewmodels.Launch"/>
         <variable
             name="main"
-            type="com.aarstrand.zindre.pokechecklist.data.MainViewModel" />
+            type="com.aarstrand.zindre.pokechecklist.viewmodels.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
