--- a/app/src/main/res/layout/dex_item.xml
+++ b/app/src/main/res/layout/dex_item.xml
@@ -2,10 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:maxHeight="100dp"
     >
     <com.aarstrand.zindre.pokechecklist.custom.DexItem
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="30dp"
+        android:paddingTop="30dp"
+        android:paddingStart="30dp"
+        android:paddingEnd="30dp"
         android:id="@+id/item"/>
 </FrameLayout>
